fix dark mode stylings

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -32,7 +32,7 @@ html {
 }
 
 #app-logo {
-  width: 350px;
+  width: 300px;
   padding: 2em;
 }
 
