--- a/client/src/components/overview/assets/styles.css
+++ b/client/src/components/overview/assets/styles.css
@@ -315,15 +315,14 @@ border: 5px dashed coral; */
 
 }
 
-/* comment this shit out  */
-.style-container {
+/* .style-container {
 	position: relative;
 	border-radius: 50%;
 	height: 81.2px;
   width: 81.2px;
 	border: 1.5px solid rgb(46, 45, 45, 0.7);
 	vertical-align: center;
-}
+} */
 
 #style-title {
 	font-family: 'Tenor Sans', sans-serif;
